--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,13 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Select Xcode version
-        run: sudo xcode-select -switch /Applications/Xcode.app
-
-
       - name: Build project
         run: |
-          xcodebuild clean build \
           -project "tests.xcodeproj" \
           -sdk iphoneos \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
+          -scheme "tests"
+          -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+          clean build
