--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build project
         run: |
-          -project "tests.xcodeproj" \
+          xcodebuild -project "tests.xcodeproj" \
           -sdk iphoneos \
           -scheme "tests"
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
