--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           xcodebuild -project "tests.xcodeproj" \
           -sdk iphoneos \
-          -scheme "tests"
+          -scheme "tests" \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
           clean build
