--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,9 +17,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: brew install xcodegen
+
+      - name: Generate Xcode project
+        run: xcodegen generate
+
       - name: Build project
         run: |
-          xcodebuild -project "tests.xcodeproj" \
+          xcodebuild -workspace MyApp.xcworkspace \
           -sdk iphoneos \
           -scheme "tests" \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
