--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build project
         run: |
-          xcodebuild -workspace MyApp.xcworkspace \
+          xcodebuild xcodebuild -project tests.xcodeproj \
           -sdk iphoneos \
           -scheme "tests" \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
