--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build & Test iOS App
-    runs-on: macos-14
+    runs-on: macos-latest
     
     steps:
       - name: Checkout repository
