--- a/project.yml
+++ b/project.yml
@@ -1,6 +1,7 @@
+name: tests
 options:
     bundleIdPrefix: com.mariamayorova
-    xcodeVersion: "16.2»
+    xcodeVersion: "16.2"
     deploymentTarget:
         iOS: "17.2"
 configs:
