--- a/SiriusProject/SiriusProject/configs/Staging.xcconfig
+++ b/SiriusProject/SiriusProject/configs/Staging.xcconfig
@@ -1,6 +1,6 @@
 //
 //  Staging.xcconfig
-//  MyApp
+//  SiriusProject
 //
 //  Created by Maria Mayorova on 26.03.2025.
 //
@@ -8,5 +8,5 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-APP_DISPLAY_NAME = MyApp staging
-PRODUCT_BUNDLE_IDENTIFIER = com.mariamayorova.MyApp.staging
+APP_DISPLAY_NAME = SiriusGame staging
+PRODUCT_BUNDLE_IDENTIFIER = com.Sirius.SiriusGame
