--- a/project.yml
+++ b/project.yml
@@ -1,57 +1,58 @@
-name: tests
+name: SiriusGameXcodeGenGenerated
 options:
-    bundleIdPrefix: inl.tests
+    bundleIdPrefix: com.Sirius
     xcodeVersion: "15.4"
     deploymentTarget:
-        iOS: "17.5"
+        iOS: "17"
 configs:
     Debug: debug
     Release: release
     Staging Debug: debug
     Staging Release: release
+configFiles:
+    Debug: SiriusProject/SiriusProject/configs/Dev.xcconfig
+    Release: SiriusProject/SiriusProject/configs/Dev.xcconfig
+    Staging Debug: SiriusProject/SiriusProject/configs/Staging.xcconfig
+    Staging Release: SiriusProject/SiriusProject/configs/Staging.xcconfig
 schemes:
-    tests Staging:
+    SiriusProject Staging:
         build:
             targets:
-                tests: all
+                SiriusProject: all
         run:
             config: Staging Debug
         test:
             config: Staging Debug
             gatherCoverageData: true
             coverageTargets:
-                - tests
-            targets:
-                - testsTests
+                - SiriusProject
         profile:
             config: Staging Release
         analyze:
             config: Staging Debug
         archive:
             config: Staging Release
-
 settings:
-GENERATE_INFOPLIST_FILE: NO
+    GENERATE_INFOPLIST_FILE: NO
 targets:
-    tests:
+    SiriusProject:
         platform: iOS
         type: application
-        deploymentTarget: "17.5"
-        sources: ["tests"]
+        deploymentTarget: "17"
+        sources: ["SiriusProject"]
         settings:
-            base:
-                INFOPLIST_FILE: "tests/Info.plist"
-        scheme:
-            testTargets:
-             - testsTests
+          base:
+            INFOPLIST_FILE: "SiriusProject/SiriusProject/Info.plist"
+            CODE_SIGN_IDENTITY: "Apple Development: Aleksey Kobyakov (2VHQM6CHHB)"
+            PROVISIONING_PROFILE_SPECIFIER: "Sirius Provisioning"
         postBuildScripts:
-    testsTests:
-        platform: iOS
-        type: bundle.unit-test
-        deploymentTarget: "18.2"
-        sources: ["Tests"]
-        dependencies:
-            - target: tests
-        settings:
-            base:
-                INFOPLIST_FILE: "tests/Info.plist"
+         - path: scripts/swiftlint_script.sh
+           name: SwiftLint
+        resources:
+            - path: Localizable
+    
+                
+                
+    
+        
+
