--- a/SiriusProject/SiriusProject/configs/Dev.xcconfig
+++ b/SiriusProject/SiriusProject/configs/Dev.xcconfig
@@ -1,6 +1,6 @@
 //
 //  Dev.xcconfig
-//  MyApp
+//  SiriusProject
 //
 //  Created by Maria Mayorova on 26.03.2025.
 //
@@ -8,5 +8,5 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-APP_DISPLAY_NAME = MyApp dev
-PRODUCT_BUNDLE_IDENTIFIER = com.mariamayorova.MyApp.dev
+APP_DISPLAY_NAME = SiriusGame dev
+PRODUCT_BUNDLE_IDENTIFIER = com.Sirius.SiriusGame
