--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Build project
         run: |
-          xcodebuild -project tests.xcodeproj \
+          xcodebuild -project SiriusGameXcodeGenGenerated.xcodeproj \
           -sdk iphoneos \
-          -scheme "tests" \
+          -scheme "SiriusProject" \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
           clean build
