--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
           xcodebuild -project SiriusGameXcodeGenGenerated.xcodeproj \
           -sdk iphoneos \
-          -scheme "SiriusProject" \
+          -scheme "SiriusProject Staging" \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
           clean build
